--- a/zarza-daemon/Cargo.toml
+++ b/zarza-daemon/Cargo.toml
@@ -12,4 +12,4 @@ pretty_env_logger = "0.4"
 zarza-consensus = { path = "../zarza-consensus" }
 zarza-network = { path = "../zarza-network" }
 warp = "0.3"
-serde = { version = "1.0", features = ["derive"] } # <--- ¡AÑADE ESTA LÍNEA!
+serde = { version = "1.0", features = ["derive"] }
