--- a/zarza-network/Cargo.toml
+++ b/zarza-network/Cargo.toml
@@ -12,3 +12,5 @@ serde_json = "1.0"
 config = "0.13"
 log = "0.4"
 zarza-consensus = { path = "../zarza-consensus" }
+futures = "0.3"
+tokio-util = { version = "0.7", features = ["codec"] }
